--- a/Screencheat Survival Game/Assembly-CSharp.csproj
+++ b/Screencheat Survival Game/Assembly-CSharp.csproj
@@ -56,9 +56,11 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Player Scripts\Controls\PlayerControls.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\HunterLook.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\HunterMovement.cs" />
     <Compile Include="Assets\Scripts\CubeTest.cs" />
+    <Compile Include="Assets\Scripts\Player Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\HealthBar.cs" />
   </ItemGroup>
   <ItemGroup>
